# AED-Project

./: .$Diagrama Classes.drawio.bkp  .gitignore  CMakeLists.txt  Diagrama Classes.drawio  main.cpp
Classes/: Class.cpp  Class.h  Lesson.cpp  Lesson.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UC.cpp  UC.h
Doxygen/: Doxyfile
Doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _class_8cpp.html  _class_8cpp_8obj_8d.html  _class_8h.html  _class_8h_source.html  _lesson_8cpp.html  _lesson_8cpp_8obj_8d.html  _lesson_8h.html  _lesson_8h_source.html  _r_e_a_d_m_e_8md.html  _schedule_8cpp.html  _schedule_8cpp_8obj_8d.html  _schedule_8h.html  _schedule_8h_source.html  _student_8cpp.html  _student_8cpp_8obj_8d.html  _student_8h.html  _student_8h_source.html  annotated.html  class_class-members.html  class_class.html  class_lesson-members.html  class_lesson.html  class_schedule-members.html  class_schedule.html  class_student-members.html  class_student.html  classes.html  dir_0c68614ac8d8401edbf4146ded722294.html  dir_179a45ef23fa5a4403e363ba9a7bfaef.html  dir_343d45b481073d8fa95dff1da8c6c056.html  dir_3ecab5db31bf37efd745a0316ec4738f.html  dir_485f5c438e427db131418579a70273a2.html  dir_52edaccda629a8747e40f3724db99138.html  dir_57aa65112072d5b0a6ef5de17c0d8dca.html  dir_80fa1d1a8a40f02f25a01d75c2e85c50.html  dir_869a595b60228b64eb26390d09266a88.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_97ba830c7e31d0fc28d762d95509b5d6.html  (+23 more)
Original Data/schedule/: classes.csv
schedule/: ActionQueue.txt  classes.csv  students_classes.csv
(+32 files in other folders)
